--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,33 +17,58 @@ html {
     background-color: #000;
 }
 
-#nav {
+#nav, .subnav {
+    list-style-type: none;
+}
 
+#nav > li {
+    display: inline-block;
 }
 
 #nav li {
-    display: inline-block;
+    position:relative;
+}
+
+#nav > li > a {
+    color: #fff;
+    text-transform: uppercase;
 }
 
 #nav li a {
-    color: #fff;
     text-decoration: none;
     line-height:46px;
     padding: 0 24px;
+    display: block;
 }
 
-#nav li:hover a {
+#nav li:hover .subnav {
+    display: block;
+}
+
+#nav .subnav li:hover a,
+#nav > li:hover > a {
     color: #000;
     background-color: #ccc;
-    display: inline-block;
 }
 
 #nav .subnav {
     display: none;
+    min-width: 160px;
+    top: 100%;
+    left: 0;
+    background-color: #fff;
+    position: absolute;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+#nav .subnav a {
+    color: #000;
+    padding: 0 12px;
 }
 
 #slider {
-
+    min-height: 500px;
+    background-color: #333;
 }
 
 #content {
