--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@ html {
 }
 
 #header {
+    position:fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     height: 46px;
     background-color: #000;
 }
